syntax = "proto3";

option csharp_namespace = "CombinationWebApp.Protos";

import "Protos/account.proto";
import "Protos/common.proto";
import "Protos/user.proto";

service TransactionService {
  rpc GetAll (Empty) returns (TransactionList);
  rpc GetBySearch (TransactionSearchRequest) returns (TransactionList);
  rpc Save (TransactionRequest) returns (TransactionReply);
  rpc Update (TransactionRequest) returns (TransactionReply);
  rpc Remove (TransactionRemoveRequest) returns (Empty);
}

message TransactionList {
  repeated Transaction transactions = 1;
}

message TransactionSearchRequest {
  string search_query = 1;
}

message TransactionRequest {
  Transaction transaction = 1;
}

message TransactionRemoveRequest {
  int32 transaction_id = 1;
}

message TransactionReply {
  Transaction transaction = 1;
}
